tests/compilefail45.out
[1mtests/compilefail45.pas:11:14: [0m[1m[91merror:[0m Type integer not compatible with type fruit in 'for' statement
    11 | 	for k := apple to j do begin